--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,36 @@
  *= require_tree .
  *= require_self
  */
+ body {
+    background-color: #FDF8F5;
+    font-family: Verdana, sans-serif;
+}
+
+.header {
+    width: 100%;
+    height: 75px;
+    background-color: #FDF8F5;
+}
+
+.header h1 {
+    margin-left: 10px;
+}
+
+.sidebar {
+    width: 20%;
+    float: left;
+    background-color: #DDAF94;
+}
+
+.content {
+    width: 75%;
+    margin-left: 25%;
+}
+
+div.sidebar li a{
+    color: #FDF8F5;
+}
+
+h1 {
+    font-weight: 150;
+}
