--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,29 @@
 
 
   <body>
-  <% flash.each do |type, msg| %>
-    <div>
-      <%= msg %>
+
+  <div class="header">
+  <h1>Feature Requests</h1>
+    <% flash.each do |type, msg| %>
+      <div class="alert">
+        <%= msg %>
+      </div>
+    <% end %>
+  </div>
+
+    <div class="sidebar">
+        <ul>
+            <li><%= link_to "All Feature Requests", requests_path %></li>
+            <li><%= link_to "New Feature Request", new_request_path %></li>
+            <li><%= link_to("My Feature Requests", "/#{current_user.id}/requests", method: :my_requests) %></li>
+            <li><%= link_to("My Votes", "/#{current_user.id}/votes", method: :my_votes) %></li>
+            <li><%= link_to("Log out", logout_path, method: :delete)  if logged_in? %></li>
+        </ul>
     </div>
-  <% end %>
+  <div class="content">
   <%= yield %>
-  <%= link_to("Log out", logout_path, method: :delete)  if logged_in? %>
+  </div>
+  
 
   </body>
 </html>
