--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,10 +22,13 @@
     width: 100%;
     height: 75px;
     background-color: #FDF8F5;
+    margin-bottom: 25px;
 }
 
 .header h1 {
     margin-left: 10px;
+    font-weight: 500px;
+    font-size: 42pt;
 }
 
 .sidebar {
@@ -43,6 +46,17 @@ div.sidebar li a{
     color: #FDF8F5;
 }
 
-h1 {
+h1, h2 {
     font-weight: 150;
 }
+
+th {
+    font-size: 12px;
+    text-align: left;
+}
+
+td {
+    font-weight: 50px;
+    padding: 10px;
+}
+
