--- a/app/views/requests/_display.html.erb
+++ b/app/views/requests/_display.html.erb
@@ -1,19 +1,24 @@
-<table>
+<table class="requests_display">
+<% if requests != [] %>
 <tr>
     <th>Feature</th>
+    <th></th>
     <th>Total Votes</th>
     <th></th>
     <th></th>
 </tr>
-<% requests.each do |r| %>
+
+<% requests.each do |r|  %>
     <tr>
         <td><%= r.name %></td>
         <td><%= link_to "More Details", request_path(r) %></td>
-        <td><%= r.total_votes %></td>
+        <td class="total_votes"><%= r.total_votes %></td>
         <td><%= link_to "Down Vote", new_request_vote_path(r, :vote_type => -1 )%></td>
         <td><%= link_to "Up Vote", new_request_vote_path(r, :vote_type => 1 )%></td>
     </tr>
 
 <% end %>
-
+<% else %>
+No requests for this feature!
+<% end %>
 </table>
