--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -3,5 +3,5 @@
 <p><%= @request.description %></p>
 <p>Created by: <%= @request.creator.email %> from <%= @request.creator.organization %></p>
 
-<%= link_to "Edit Feature Request", edit_request_path(@request) %>
+<%= link_to "Edit Feature Request", edit_request_path(@request) if current_user == @request.creator %>
 <%= link_to "Delete Feature Request",  "/requests/#{@request.id}/delete" if current_user.admin %>
