most_votes done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,23 +19,28 @@
 
   <body>
   <div class="header">
-  <h1>Feature Requests</h1>
+  <span><h1>Feature Requests</h1>
     <% flash.each do |type, msg| %>
       <div class="alert">
         <%= msg %>
       </div>
-    <% end %>
+    <% end %></span>
   </div>
-
+    <% if current_user %>
     <div class="sidebar">
         <ul>
             <li><%= link_to "All Feature Requests", requests_path %></li>
             <li><%= link_to "New Feature Request", new_request_path %></li>
             <li><%= link_to("My Feature Requests", "/#{current_user.id}/requests", method: :my_requests) %></li>
-            <li><%= link_to("My Votes", "/#{current_user.id}/votes", method: :my_votes) %></li>
+            <li><%= link_to("My Votes", "/#{current_user.id}/votes", method: :my_votes) %></li>    
+            <li><%= link_to("Most Votes", "/most_votes", method: :most_votes) %></li>
+            <% if current_user.admin %>
+              <li><%= link_to("All Categories", categories_path) %></li>
+              <% end %>
             <li><%= link_to("Log Out", logout_path, method: :delete)  if logged_in? %></li>
         </ul>
     </div>
+    <% end %>
   <div class="content">
   <%= yield %>
   </div>
