--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,10 @@
 .alert {
     background-color: #266150;
     color: #FDF8F5;
+    width: 20%;
+    float: right;
+    margin-top: -100px;
+    padding: 8px 16px;
 }
 
 .sidebar {
