--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
         <ul>
             <li><%= link_to "All Feature Requests", requests_path %></li>
             <li><%= link_to "New Feature Request", new_request_path %></li>
-            <li><%= link_to("My Feature Requests", "/#{current_user.id}/requests", method: :my_requests) %></li>
-            <li><%= link_to("My Votes", "/#{current_user.id}/votes", method: :my_votes) %></li>    
+            <li><%= link_to("My Feature Requests", "/users/#{current_user.id}/requests", method: :my_requests) %></li>
+            <li><%= link_to("My Votes", "/users/#{current_user.id}/votes", method: :my_votes) %></li>    
             <li><%= link_to("Most Votes", "/most_votes", method: :most_votes) %></li>
             <% if current_user.admin %>
               <li><%= link_to("All Categories", categories_path) %></li>
